# ethercat-simulator

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  PRD.md  README.md  a-main.sh  a-master.sh  a-slaves.sh  a-subs.sh  build.sh  conanfile.py  install.sh  master.sh  run.sh  simul.sh  slaves.sh  test.sh  tui.sh  update_clangd.sh
.conan2/: .conan.db  remotes.json  settings.yml
.conan2/p/: cache.sqlite3
.conan2/p/b/gtestaae71829f8d6a/b/: conaninfo.txt
.conan2/p/b/gtestaae71829f8d6a/b/src/googletest/cmake/: internal_utils.cmake
.conan2/p/b/gtestaae71829f8d6a/p/: conanmanifest.txt
.conan2/p/b/kickc37623b493c11c/b/: conaninfo.txt
.conan2/p/b/kickc37623b493c11c/p/: conanmanifest.txt
.conan2/p/gtest5fa386df87de0/d/: conan_export.tgz
.conan2/p/gtest5fa386df87de0/e/: conandata.yml  conanmanifest.txt
.conan2/p/kickc9f6cf38dc4bbe/d/: conan_export.tgz
.conan2/p/kickc9f6cf38dc4bbe/e/: conandata.yml  conanmanifest.txt
apps/master/: CMakeLists.txt
apps/master/app/: main.cpp
apps/master/bus/: master_socket.cpp  master_socket.h
apps/master/gui/: master_tui.cpp  master_tui.h
apps/master/logic/: master_controller.cpp  master_controller.h  master_model.h
apps/slaves/: CMakeLists.txt
apps/slaves/app/: main.cpp
apps/slaves/bus/: slaves_endpoint.cpp  slaves_endpoint.h  subs_endpoint.cpp
apps/slaves/gui/: slaves_tui.cpp  slaves_tui.h
apps/slaves/logic/: slaves_controller.cpp  slaves_controller.h  slaves_model.h
apps/slaves/sim/: el1258_subs.h
core/: CMakeLists.txt
core/communication/: dds_text_type.cpp  endpoint_parser.cpp  endpoint_parser.h  socket_factory.cpp  socket_factory.h
core/framework/application/: base_application.cpp  base_application.h
core/framework/logger/: CMakeLists.txt  logger.cpp  logger.h  test_logger.cpp
core/framework/mvc/: base_controller.h  base_model.h  observable.h
core/kickcat/: sim_socket.cpp
core/simulation/: network_simulator.cpp
docs/: ARCHITECTURE.md  ARCHITECTURE_KR.md  Beckhoff-EL1xxx.xml  ECAT-SIM-LOGS.md  ECAT-SIMUL.md  KICKCAT.md  STUDY-CPP-LAMBDA.md
examples/fastdds_sim_pub/: CMakeLists.txt  main.cpp
examples/fastdds_smoke/: CMakeLists.txt  main.cpp
examples/ftxui_demo/: CMakeLists.txt  main.cpp
examples/hello/: CMakeLists.txt  main.cpp
examples/kickcat_scan/: CMakeLists.txt  main.cpp
examples/pdo_lrw/: CMakeLists.txt  main.cpp
examples/simul/: CMakeLists.txt  main.cpp
gui/desktop/: CMakeLists.txt
gui/desktop/qml/: Main.qml  qml.qrc
gui/desktop/src/: main.cpp
include/ethercat_sim/app/: cli_runtime.h
include/ethercat_sim/communication/: dds_text.h  endpoint_parser.h  ethercat_frame.h  socket_factory.h
include/ethercat_sim/framework/application/: base_application.h
include/ethercat_sim/framework/mvc/: base_controller.h  base_model.h  observable.h
include/ethercat_sim/kickcat/: sim_socket.h
include/ethercat_sim/simulation/: network_simulator.h  virtual_slave.h
include/ethercat_sim/simulation/slaves/: el1258.h  el1258_constants.h
libs/kickcat/: README.md
libs/kickcat/include/kickcat/: AbstractDiagSocket.h  AbstractSocket.h  Bus.h  DebugHelpers.h  Diagnostics.h  Error.h  Frame.h  Gateway.h  KickCAT.h  Link.h  Mailbox.h  Prints.h  Slave.h  SocketNull.h  Time.h  protocol.h
libs/kickcat/include/kickcat/OS/Linux/: Socket.h  UdpDiagSocket.h
libs/kickcat/include/kickcat/OS/PikeOS/: ErrorCategory.h  Socket.h
src/a-main/: CMakeLists.txt
src/a-main/app/: main.cpp
src/a-main/bus/: main_socket.cpp  main_socket.h
src/a-main/mvc/controller/: main_controller.cpp  main_controller.h
src/a-main/mvc/model/: main_model.h
src/a-main/mvc/view/: main_tui.cpp  main_tui.h
src/a-master/: CMakeLists.txt
src/a-master/app/: main.cpp
src/a-master/bus/: master_socket.cpp
src/a-master/mvc/controller/: master_controller.cpp  master_controller.h
src/a-master/mvc/model/: master_model.h
src/a-master/mvc/view/: master_tui.cpp  master_tui.h
src/a-slaves/: CMakeLists.txt
src/a-slaves/app/: main.cpp
src/a-slaves/bus/: slave_endpoint.cpp  slave_endpoint.h
src/a-slaves/mvc/controller/: slave_controller.cpp  slave_controller.h
src/a-slaves/mvc/model/: slave_model.h
src/a-slaves/mvc/view/: slave_tui.cpp  slave_tui.h
src/a-slaves/sim/: el1258_slave.h
src/a-subs/: CMakeLists.txt
src/a-subs/app/: main.cpp
src/a-subs/bus/: subs_endpoint.cpp  subs_endpoint.h
src/a-subs/mvc/controller/: subs_controller.cpp  subs_controller.h
src/a-subs/mvc/model/: subs_model.h
src/a-subs/mvc/view/: subs_tui.cpp  subs_tui.h
src/a-subs/sim/: el1258_subs.h
tests/: CMakeLists.txt
tests/dds/: test_text_msg_bounds.cpp  test_text_msg_pubsub.cpp
tests/kickcat/: test_apr_lr.cpp  test_bus_init.cpp  test_bus_minimal.cpp  test_kickcat_adapter.cpp  test_sdo.cpp
tests/master/: test_master_controller.cpp
tests/simulation/: test_al_status_codes.cpp  test_el1258.cpp  test_mailbox.cpp  test_network_simulator.cpp  test_simulator_registry.cpp  test_slave_registers.cpp
tools/: sync_kickcat.sh
tui/: CMakeLists.txt
tui/src/: main.cpp
